--- a/css/style.css
+++ b/css/style.css
@@ -122,20 +122,18 @@ div.polaroid img {
   font-size: 12px;
   text-align: center;
   display: inline;
-  opacity: 0.7;
   color: white;
   height: 50px;
-  background-color: black;
+  background-color: #343a40;
   float: left;
 }
 @media (min-width: 765px) {
   .rodape {
     text-align: center;
     display: inline;
-    opacity: 0.7;
     color: white;
     height: 50px;
-    background-color: black;
+    background-color: #343a40;
     float: left;
     font-size: 16px;
   }
