--- a/css/style.css
+++ b/css/style.css
@@ -123,7 +123,7 @@ div.polaroid img {
   text-align: center;
   display: inline;
   color: white;
-  height: 50px;
+  height: auto;
   background-color: #343a40;
   float: left;
 }
@@ -132,7 +132,7 @@ div.polaroid img {
     text-align: center;
     display: inline;
     color: white;
-    height: 50px;
+    height: auto;
     background-color: #343a40;
     float: left;
     font-size: 16px;
