--- a/css/style.css
+++ b/css/style.css
@@ -132,7 +132,7 @@ div.polaroid img {
     text-align: center;
     display: inline;
     color: white;
-    height: auto;
+    height: 11  0px;
     background-color: #343a40;
     float: left;
     font-size: 16px;
